Agregado del logo al footer

--- a/index.html
+++ b/index.html
@@ -370,49 +370,53 @@
       </section>
     </main>
 
-    <footer class="main-footer bg-dark text-white py-4">
-      <div class="container text-center">
-        <div class="footer-logo mb-3">
-          <a href="/index.html">
-            <img
-              src="https://png.pngtree.com/png-clipart/20210912/original/pngtree-letter-a-logo-png-design-vector-png-image_6760063.jpg"
-              alt="Logo"
-              class="logo-footer"
-              width="80"
-            />
-          </a>
-        </div>
-        <section class="footer-social mb-3">
-          <ul class="list-unstyled d-flex justify-content-center gap-4">
-            <li>
-              <a href="#" class="text-white text-decoration-none"
-                ><i class="fa-brands fa-linkedin"></i> Linkedin</a
-              >
-            </li>
-            <li>
-              <a href="#" class="text-white text-decoration-none"
-                ><i class="fa-brands fa-instagram"></i> Instagram</a
-              >
-            </li>
-            <li>
-              <a href="#" class="text-white text-decoration-none"
-                ><i class="fa-brands fa-square-facebook"></i> Facebook</a
-              >
-            </li>
-          </ul>
-        </section>
-
-        <section class="footer-brand mb-2">
-          <strong>© 2025 Gamers Shop</strong> - Todos los derechos reservados
-        </section>
-
-        <section class="footer-info">
-          <p>Dirección: Av. Siempre Viva 123, Springfield</p>
-          <p>Teléfono: +1 234 567 890</p>
-          <p>Email: contacto@gamershop.com</p>
-        </section>
+<footer class="main-footer bg-dark text-white py-4">
+  <div class="container">
+    <div class="row g-4">
+      
+      <div class="col-12 col-md-4 text-center text-md-start">
+        <img src="https://png.pngtree.com/png-clipart/20210912/original/pngtree-letter-a-logo-png-design-vector-png-image_6760063.jpg" alt="Logo Venta Gamer" width="120" class="mb-3">
       </div>
-    </footer>
+
+      <div class="col-12 col-md-4 text-center">
+        <h5 class="mb-3">Síguenos</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2">
+            <a href="#" class="text-white text-decoration-none">
+              <i class="fa-brands fa-linkedin"></i> LinkedIn
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" class="text-white text-decoration-none">
+              <i class="fa-brands fa-instagram"></i> Instagram
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="#" class="text-white text-decoration-none">
+              <i class="fa-brands fa-facebook"></i> Facebook
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-12 col-md-4 text-center text-md-start">
+        <h5 class="mb-3">Contacto</h5>
+        <p class="mb-2">📍 Av. Siempre Viva 123, Springfield</p>
+        <p class="mb-2">📞 +1 234 567 890</p>
+        <p class="mb-2">✉️ contacto@ventagamer.com</p>
+      </div>
+
+    </div>
+
+    <!-- Copyright -->
+    <div class="row mt-4">
+      <div class="col-12 text-center">
+        <hr class="bg-white">
+        <p class="mb-0">© 2025 Venta Gamer - Todos los derechos reservados</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <div class="modal-overlay" id="modalRegistro">
       <div class="registro-container">
