--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -125,7 +125,7 @@
     <div class="row g-4">
       
       <div class="col-12 col-md-4 text-center text-md-start">
-        <img src="https://png.pngtree.com/png-clipart/20210912/original/pngtree-letter-a-logo-png-design-vector-png-image_6760063.jpg" alt="Logo Venta Gamer" width="120" class="mb-3">
+        <img src="https://png.pngtree.com/png-clipart/20210912/original/pngtree-letter-a-logo-png-design-vector-png-image_6760063.jpg" alt="Logo Venta Gamer" width="120" class="mb-3 logo-footer">
       </div>
 
       <div class="col-12 col-md-4 text-center">
